--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_DARKSKY_API=##API-Key-goes-here##
-VUE_APP_GEOCODIO_API=##API-Key-goes-here##
+VUE_APP_DARKSKY_API=e73a1e421ee58680c4339c6f41f718a9
+VUE_APP_GEOCODIO_API=e4accc7c57859a8c5d7cc425c5aac8d5a5ca4c3
