--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
-    "vue": "^2.6.7"
+    "vue": "^2.6.7",
+    "vue-skycons": "^1.0.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
